<resources>
    <string name="app_name">FlixHub</string>

    <string name="gettingStarted_title">Bienvenue sur FlixHub</string>
    <string name="gettingStarted_subtitle">La meilleure application de streaming du siècle ! Pour rendre vos jours meilleurs</string>
    <string name="gettingStarted_button">Commencer</string>

    <string name="register_title">Créer un compte</string>
    <string name="register_email">Email</string>
    <string name="register_password">Mot de passe</string>
    <string name="register_button">Créer un compte</string>
    <string name="register_cgu">J\'accepte les conditions d\'utilisation</string>
    <string name="register_already_have_account">Vous avez déjà un compte ?</string>
    <string name="register_login">Connectez-vous</string>

    <string name="login_title">Connectez-vous</string>
    <string name="login_email">Email</string>
    <string name="login_password">Mot de passe</string>
    <string name="login_button">Se connecter</string>
    <string name="login_forgot_password">Mot de passe oublié ?</string>
    <string name="login_no_account">Vous n\'avez pas de compte ?</string>
    <string name="login_register">Créez un compte</string>
    <string name="login_remind_me">Se souvenir de moi</string>

    <string name="register_interests_title">Centres d\'intérêt</string>
    <string name="register_interests_subtitle">Sélectionnez vos centres d\'intérêt</string>
    <string name="register_interests_skip">Passer</string>
    <string name="register_interests_submit">Continuer</string>
    <string name="register_movie_interests_error">Veuillez sélectionner au moins 3 centres d\'intérêt de film</string>
    <string name="register_serie_interests_error">Veuillez sélectionner au moins 3 centres d\'intérêt de serie</string>

    <string name="register_profile_title">Créer votre profil</string>
    <string name="register_profile_name">Nom</string>
    <string name="register_profile_email">Email</string>
    <string name="register_profile_skip">Passer</string>
    <string name="register_profile_submit">Continuer</string>
    <string name="register_input_error">Tous les champs sont obligatoires</string>

    <string name="home_category_see_all">Voir tout</string>
    <string name="home_play_button">Regarder</string>
    <string name="home_add_list">Ma liste</string>

    <string name="log_choice_button">Connectez vous</string>
    <string name="log_choice_title">Let\'s you in</string>

    <string name="media_download_button">Télécharger</string>
    <string name="media_play_button">Regarder</string>
    <string name="media_trailer_title">Bande d\'annonces</string>
    <string name="media_play_warn">C\'est illégal, nous ne pouvons pas diffuser les films sans en avoir les droits de distribution</string>
    <string name="media_play_warn_confirmation">Êtes-vous sûr de vouloir regarder le film illégalement ?</string>

    <string name="list_title">Ma liste</string>

    <string name="profile_toolbar">Profil</string>
    <string name="profile_edit_profile">Modifier votre profil</string>
    <string name="profile_edit_notifications">Notifications</string>
    <string name="profile_edit_security">Sécurité</string>
    <string name="profile_privacy_policy">Politique de confidentialité</string>
    <string name="profile_logout">Se déconnecter</string>

    <string name="logout_title">Déconnexion</string>
    <string name="logout_cancel">Annuler</string>
    <string name="logout_confirm">Oui, se déconnecter</string>
    <string name="logout_message">Êtes-vous sûr de vouloir vous déconnecter ?</string>

    <string name="discover_search_hint">Rechercher</string>
    <string name="register_profile_birthdate">Date de naissance</string>
    <string name="register_fullname">Nom complet</string>
    <string name="register_error">Une erreur est survenue lors de l\'inscription</string>
    <string name="register_success">L\'inscription s\'est déroulée avec succès</string>
    <string name="profile_chooser_title">Qui est-ce ?</string>
    <string name="profile_chooser_add">Ajouter un profil</string>
    <string name="modal_create_profile_title">Créer un profil</string>
    <string name="modal_create_profile_choose_avatar">Choisir un avatar</string>
    <string name="profile_edit_account">Informations du compte</string>
    <string name="modal_edit_profile_title">Modifier le profil de</string>
    <string name="modal_edit_profile_delete">Supprimer le profil</string>
    <string name="modal_edit_profile_submit">Modifier</string>
    <string name="profile_change_profile">Changer de profil</string>
    <string name="profile_history">Historique</string>
    <string name="profile_history_title">Historique</string>
    <string name="media_add_list_button">Ma liste</string>
    <string name="modal_erase_history_title">Effacer l\'historique</string>
    <string name="modal_erase_history_subtitle">Êtes-vous sûr de vouloir effacer votre historique ? Cette action est irréversible.</string>
    <string name="modal_erase_history_cancel">Annuler</string>
    <string name="modal_erase_history_erase">Effacer</string>
    <string name="home_tab_movie_title">Films</string>
    <string name="home_tab_serie_title">Séries</string>
    <string name="empty_list_subtitle">Il semble que vous n\'ayez pas ajouté de films à la liste</string>
    <string name="empty_list_title">Votre liste est vide</string>
    <string name="episodes">Épisodes</string>
    <string name="modal_avatar_picker_title">Choisissez un avatar</string>
    <string name="privacy_policy_title_1">Politique de Confidentialité de FlixHub</string>
    <string name="privacy_policy_text_1">Cette politique de confidentialité explique comment FlixHub recueille, utilise et protège les informations personnelles que vous nous fournissez lorsque vous utilisez notre application mobile FlixHub (l\'application). FlixHub est dédié à la protection de la vie privée de ses utilisateurs. Toute information que nous recueillons est utilisée conformément à cette politique de confidentialité.  En utilisant l\'application, vous consentez à la collecte et à l\'utilisation de vos informations personnelles telles que décrites dans cette politique de confidentialité. Si vous n\'acceptez pas les termes de cette politique de confidentialité, veuillez ne pas utiliser l\'application.</string>
    <string name="privacy_policy_title_2">1. Informations que nous collectons :</string>
    <string name="privacy_policy_title_3">2. Comment nous utilisons vos informations :</string>
    <string name="privacy_policy_text_3">Nous utilisons les informations collectées pour :\n \n- Vous fournir des fonctionnalités et des services personnalisés. \n- Améliorer et optimiser l\'expérience utilisateur. \n- Analyser les tendances d\'utilisation et les préférences des utilisateurs. \n- Vous envoyer des notifications et des mises à jour concernant l\'application.</string>
    <string name="privacy_policy_title_4">3. Partage des informations :</string>
    <string name="privacy_policy_text_4">Nous ne vendons, n\'échangeons ni ne louons vos informations personnelles à des tiers sans votre consentement. Cependant, nous pouvons partager vos informations avec des tiers de confiance qui nous aident à exploiter l\'application ou à fournir des services en notre nom, sous réserve de cette politique de confidentialité.</string>
    <string name="privacy_policy_title_5">4. Sécurité des informations :</string>
    <string name="privacy_policy_text_5">Nous mettons en place des mesures de sécurité appropriées pour protéger vos informations personnelles contre tout accès non autorisé, altération, divulgation ou destruction.</string>
    <string name="privacy_policy_title_6">5. Modifications de la politique de confidentialité :</string>
    <string name="privacy_policy_text_6">FlixHub se réserve le droit de modifier cette politique de confidentialité à tout moment. Toute modification de cette politique de confidentialité sera affichée sur cette page avec la date de révision mise à jour.</string>
    <string name="privacy_policy_title_7">6. Contactez-nous :</string>
    <string name="privacy_policy_text_7">Si vous avez des questions ou des préoccupations concernant cette politique de confidentialité, veuillez nous contacter à l\'adresse suivante : nassimlnd37@gmail.com.  \nCette politique de confidentialité a été mise à jour le 27 mars 2024.</string>
    <string name="user_informations_title">Informations du compte</string>
    <string name="user_informations_submit_button">Modifier</string>
    <string name="user_information_edit_title">Modifier les informations du compte</string>
    <string name="notifications_settings_title">Notifications</string>
    <string name="user_informations_delete_button">Supprimer le compte</string>
    <string name="privacy_policy_text_2">1.1 Informations personnelles : \nLors de votre utilisation de l\'application, nous pouvons recueillir certaines informations personnelles vous concernant, telles que votre nom, votre adresse e-mail, votre âge, et vos préférences de contenu. \n\n1.2 Données d\'utilisation : \nNous pouvons également collecter des informations sur la manière dont vous utilisez l\'application, telles que les films/émissions regardés, les recherches effectuées, les interactions avec l\'interface utilisateur, etc.</string>
    <string name="add_movie">vous avez ajouté un film à votre liste</string>
    <string name="remove_movie">vous avez retiré un film de votre liste</string>
</resources>