<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lexend"
        android:text="@string/login_title"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <EditText
        android:autofillHints="emailAddress"
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rounded"
        android:drawableStart="@drawable/mail"
        android:drawablePadding="12dp"
        android:fontFamily="@font/lexend"
        android:hint="@string/login_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="14sp" />

    <EditText
        android:autofillHints="password"
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rounded"
        android:drawableStart="@drawable/lock_keyhole"
        android:drawablePadding="12dp"
        android:fontFamily="@font/lexend"
        android:hint="@string/login_password"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/loginForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/lexend"
        android:text="@string/login_forgot_password"
        android:textColor="@color/primary"
        android:textSize="14sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/lexend"
        android:text="@string/login_button"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend"
            android:text="@string/login_no_account"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_marginEnd="4dp"/>

        <TextView
            android:id="@+id/loginRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexend"
            android:text="@string/login_register"
            android:textColor="@color/primary"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>