<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_dialog_rounded"
    android:paddingVertical="24dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_title"
        android:textAlignment="center"
        android:textFontWeight="700"
        android:textColor="@color/danger"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="24dp"
        android:background="@color/hint" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/logout_message"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="24dp"
        android:layout_marginTop="24dp"
        app:alignItems="center"
        app:flexDirection="row"
        app:justifyContent="center">
        <Button
            android:id="@+id/logout_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:theme="@style/Button.Secondary"
            android:text="@string/logout_cancel" />
        <Button
            android:id="@+id/logout_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/Base.Theme.Flixhub"
            android:text="@string/logout_confirm" />

    </com.google.android.flexbox.FlexboxLayout>


</LinearLayout>