<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_dialog_rounded"
    android:orientation="vertical"
    android:paddingVertical="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend"
        android:text="@string/modal_erase_history_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:background="@color/background_light" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:fontFamily="@font/lexend"
        android:gravity="center"
        android:text="@string/modal_erase_history_subtitle"
        android:textColor="@color/hint"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <Button
            android:id="@+id/cancelEraseHistoryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/lexend"
            android:text="@string/modal_erase_history_cancel"
            android:textColor="@color/white"
            android:theme="@style/Button.Secondary" />

        <Button
            android:id="@+id/eraseHistoryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lexend"
            android:text="@string/modal_erase_history_erase"
            android:textColor="@color/white"
            android:theme="@style/Button.Danger" />

    </LinearLayout>


</LinearLayout>