<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bottom_sheet_dialog_rounded"
    android:orientation="vertical"
    android:paddingVertical="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lexend"
        android:text="@string/modal_create_profile_title"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="24dp"
        android:background="@color/background_light" />

    <LinearLayout
        android:id="@+id/chooseAvatarButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/image_upload"
            android:clipToOutline="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/lexend"
            android:text="@string/modal_create_profile_choose_avatar"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/registerProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:autofillHints="name"
        android:background="@drawable/edit_text_rounded"
        android:fontFamily="@font/lexend"
        android:hint="@string/register_profile_name"
        android:inputType="text"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/registerProfileBirthdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/edit_text_rounded"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="@font/lexend"
        android:hint="@string/register_profile_birthdate"
        android:inputType="date"
        android:paddingHorizontal="16dp"
        android:paddingVertical="16dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerProfileCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/lexend"
            android:text="@string/logout_cancel"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:theme="@style/Button.Secondary" />

        <Button
            android:id="@+id/registerProfileSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/lexend"
            android:text="@string/register_profile_submit"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:theme="@style/Base.Theme.Flixhub" />
    </LinearLayout>


</LinearLayout>